--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "ts-starter",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^14.14.35",
-    "typescript": "^4.2.3"
-  }
+	"name": "ts-starter",
+	"version": "1.0.0",
+	"main": "index.js",
+	"license": "MIT",
+	"scripts": {
+		"start:dev": "nodemon"
+	},
+	"devDependencies": {
+		"@types/node": "^14.14.35",
+		"nodemon": "^2.0.7",
+		"ts-node": "^9.1.1",
+		"typescript": "^4.2.3"
+	}
 }
