--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
-		"start:dev": "nodemon"
+		"start:dev": "nodemon",
+		"start": "tsc && node build/index.js"
 	},
 	"devDependencies": {
 		"@types/node": "^14.14.35",
