--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
 		"start": "tsc && node build/index.js"
 	},
 	"devDependencies": {
+		"@types/express": "^4.17.13",
 		"@types/node": "^14.14.35",
 		"nodemon": "^2.0.7",
 		"ts-node": "^9.1.1",
 		"typescript": "^4.2.3"
+	},
+	"dependencies": {
+		"express": "^4.17.1"
 	}
 }
