--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
 		"typescript": "^4.2.3"
 	},
 	"dependencies": {
-		"express": "^4.17.1"
+		"express": "^4.17.1",
+		"pg": "^8.7.1",
+		"reflect-metadata": "^0.1.13",
+		"typeorm": "^0.2.36"
 	}
 }
