--- a/ormconfig.json
+++ b/ormconfig.json
@@ -12,6 +12,7 @@
     "./src/database/migrations/*.ts"
   ],
   "cli": {
-    "migrations": "./src/database/migrations"
+    "migrationsDir": "./src/database/migrations",
+    "entitiesDir": "./src/models/*.ts"
   }
 }
