--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"scripts": {
 		"dev": "nodemon",
-		"start": "tsc && node build/index.js"
+		"start": "tsc && node build/index.js",
+    "typeorm": "ts-node ./node_modules/typeorm/cli.js"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.13",
