--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,7 @@
 {
   "arrowParens": "avoid",
-  "bracketSpacing": true,
-  "endOfLine": "auto",
-  "semi": false,
-  "proseWrap": "preserve",
   "singleQuote": true,
   "useTabs": false,
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "tabWidth": 2
 }
