--- a/package.json
+++ b/package.json
@@ -6,12 +6,21 @@
 	"scripts": {
 		"dev": "nodemon",
 		"start": "tsc && node build/index.js",
-    "typeorm": "ts-node ./node_modules/typeorm/cli.js"
+		"typeorm": "ts-node ./node_modules/typeorm/cli.js"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.13",
 		"@types/node": "^14.14.35",
+		"@typescript-eslint/eslint-plugin": "^4.29.0",
+		"@typescript-eslint/parser": "^4.29.0",
+		"eslint": "^7.32.0",
+		"eslint-config-airbnb-base": "^14.2.1",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-import-resolver-typescript": "^2.4.0",
+		"eslint-plugin-import": "^2.23.4",
+		"eslint-plugin-prettier": "^3.4.0",
 		"nodemon": "^2.0.7",
+		"prettier": "^2.3.2",
 		"ts-node": "^9.1.1",
 		"typescript": "^4.2.3"
 	},
