--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"typescript": "^4.2.3"
 	},
 	"dependencies": {
+		"bcrypt": "^5.0.1",
 		"express": "^4.17.1",
 		"pg": "^8.7.1",
 		"reflect-metadata": "^0.1.13",
