--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"typeorm": "ts-node ./node_modules/typeorm/cli.js"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.13",
 		"@types/node": "^14.14.35",
 		"@typescript-eslint/eslint-plugin": "^4.29.0",
