--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
 		"@types/express": "^4.17.13",
+		"@types/jsonwebtoken": "^8.5.4",
 		"@types/node": "^14.14.35",
 		"@typescript-eslint/eslint-plugin": "^4.29.0",
 		"@typescript-eslint/parser": "^4.29.0",
@@ -28,6 +29,7 @@
 	"dependencies": {
 		"bcrypt": "^5.0.1",
 		"express": "^4.17.1",
+		"express-async-errors": "^3.1.1",
 		"pg": "^8.7.1",
 		"reflect-metadata": "^0.1.13",
 		"typeorm": "^0.2.36"
