--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	},
 	"dependencies": {
 		"bcrypt": "^5.0.1",
+		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"express-async-errors": "^3.1.1",
 		"pg": "^8.7.1",
