--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"express-async-errors": "^3.1.1",
+		"jsonwebtoken": "^8.5.1",
 		"pg": "^8.7.1",
 		"reflect-metadata": "^0.1.13",
 		"typeorm": "^0.2.36"
