--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
-		"dev": "nodemon",
+		"dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
 		"start": "tsc && node build/index.js",
 		"typeorm": "ts-node ./node_modules/typeorm/cli.js"
 	},
@@ -21,9 +21,9 @@
 		"eslint-import-resolver-typescript": "^2.4.0",
 		"eslint-plugin-import": "^2.23.4",
 		"eslint-plugin-prettier": "^3.4.0",
-		"nodemon": "^2.0.7",
 		"prettier": "^2.3.2",
 		"ts-node": "^9.1.1",
+		"ts-node-dev": "^1.1.8",
 		"typescript": "^4.2.3"
 	},
 	"dependencies": {
