--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
-  "arrowParens": "avoid",
-  "endOfLine": "lf",
   "singleQuote": true,
+  "trailingComma": "es5",
+  "arrowParens": "avoid",
   "useTabs": false,
-  "trailingComma": "all",
-  "tabWidth": 2
+  "tabWidth": 2,
+  "endOfLine": "lf"
 }
